--- a/index.html
+++ b/index.html
@@ -1,114 +1,68 @@
+<!DOCTYPE html>
+<html data-wf-domain="www.metergrid.de" data-wf-page="66266f1f8efc9588e28a247e" data-wf-site="66266f1f8efc9588e28a247a" data-wf-intellimize-customer-id="117797829" lang="de-DE">
 
-<!DOCTYPE html><!-- Last Published: Fri Sep 05 2025 09:43:09 GMT+0000 (Coordinated Universal Time) --><html data-wf-domain="www.metergrid.de" data-wf-page="66266f1f8efc9588e28a247e" data-wf-site="66266f1f8efc9588e28a247a" data-wf-intellimize-customer-id="117797829" lang="de-DE"><head><meta charset="utf-8"/><title>metergrid - Deine All-in-One Lösung für die einfache Umsetzung von Mieterstrom</title><meta content="metergrid realisiert dein Mieterstrom Projekt mit unserer All-In-One-Software. Rendite für dich, Solarstrom für deine Mieter. Jetzt Beratung anfragen!" name="description"/><meta content="metergrid - Deine All-in-One Lösung für die einfache Umsetzung von Mieterstrom" property="og:title"/><meta content="metergrid realisiert dein Mieterstrom Projekt mit unserer All-In-One-Software. Rendite für dich, Solarstrom für deine Mieter. Jetzt Beratung anfragen!" property="og:description"/><meta content="https://cdn.prod.website-files.com/66266f1f8efc9588e28a247a/6852b8fa40e15f2470f34f78_open%20graph%20(1).png" property="og:image"/><meta content="metergrid - Deine All-in-One Lösung für die einfache Umsetzung von Mieterstrom" property="twitter:title"/><meta content="metergrid realisiert dein Mieterstrom Projekt mit unserer All-In-One-Software. Rendite für dich, Solarstrom für deine Mieter. Jetzt Beratung anfragen!" property="twitter:description"/><meta property="og:type" content="website"/><meta content="summary_large_image" name="twitter:card"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://cdn.prod.website-files.com/66266f1f8efc9588e28a247a/css/dev-metergrid-v2.webflow.shared.6413dae9e.min.css" rel="stylesheet" type="text/css"/><link href="https://fonts.googleapis.com" rel="preconnect"/><link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous"/><script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script><script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic"]  }});</script><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script><link href="https://cdn.prod.website-files.com/6612d9034bf3b091b5ec7439/6612d914e155eff2035d8428_Favicon.png" rel="shortcut icon" type="image/x-icon"/><link href="https://cdn.prod.website-files.com/6612d9034bf3b091b5ec7439/6612d91696b0f15f809a67f7_Webclip.png" rel="apple-touch-icon"/><link href="https://www.metergrid.de" rel="canonical"/><style>.anti-flicker, .anti-flicker * {visibility: hidden !important; opacity: 0 !important;}</style><style>[data-wf-hidden-variation], [data-wf-hidden-variation] * {
-        display: none !important;
-      }</style><script type="text/javascript">localStorage.removeItem('intellimize_opt_out_117797829'); if (localStorage.getItem('intellimize_data_tracking_type') !== 'always') { localStorage.setItem('intellimize_data_tracking_type', 'always'); }</script><script type="text/javascript">(function(e){var s={r:[]};e.wf={r:s.r,ready:t=>{s.r.push(t)}}})(window)</script><script type="text/javascript">(function(e,t,p){var n=document.documentElement,s={p:[],r:[]},u={p:s.p,r:s.r,push:function(e){s.p.push(e)},ready:function(e){s.r.push(e)}};e.intellimize=u,n.className+=" "+p,setTimeout(function(){n.className=n.className.replace(RegExp(" ?"+p),"")},t)})(window, 4000, 'anti-flicker')</script><link href="https://cdn.intellimize.co/snippet/117797829.js" rel="preload" as="script"/><script type="text/javascript">var wfClientScript=document.createElement("script");wfClientScript.src="https://cdn.intellimize.co/snippet/117797829.js",wfClientScript.async=!0,wfClientScript.onerror=function(){document.documentElement.className=document.documentElement.className.replace(RegExp(" ?anti-flicker"),"")},document.head.appendChild(wfClientScript);</script><link href="https://api.intellimize.co" rel="preconnect" crossorigin="true"/><link href="https://log.intellimize.co" rel="preconnect" crossorigin="true"/><link href="https://117797829.intellimizeio.com" rel="preconnect"/><!-- Finsweet Cookie Consent -->
-<script async src="https://cdn.jsdelivr.net/npm/@finsweet/cookie-consent@1/fs-cc.js" fs-cc-consentmode="true" fs-cc-scroll="disable" fs-cc-mode="opt-in">
-</script>
+<head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
 
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KMB3SZ26');</script>
-<!-- End Google Tag Manager -->
+    <link href="https://cdn.prod.website-files.com" rel="preconnect" />
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
+    <link href="https://api.intellimize.co" rel="preconnect" crossorigin="true" />
+    <link href="https://cdn.intellimize.co" rel="preconnect" />
+    <link href="https://www.googletagmanager.com" rel="preconnect" />
 
-<style>
-/* Overlay blockiert Klicks auf den Hintergrund */
-body.fs-cc--open::before {
-  content: '';
-  position: fixed;
-  inset: 0;
-  background: rgba(255, 255, 255, 0.6);
-  z-index: 9999; /* Unter dem Banner */
-  pointer-events: all;
-}
+    <title>metergrid - Deine All-in-One Lösung für die einfache Umsetzung von Mieterstrom</title>
+    <meta content="metergrid realisiert dein Mieterstrom Projekt mit unserer All-In-One-Software. Rendite für dich, Solarstrom für deine Mieter. Jetzt Beratung anfragen!" name="description" />
+    <link href="https://www.metergrid.de" rel="canonical" />
 
-.fs-consent_component {
-  position: relative;
-  z-index: 10000 !important; /* Über dem Overlay */
-  pointer-events: auto;
-  display: block !important;
-}
+    <link href="https://cdn.prod.website-files.com/6612d9034bf3b091b5ec7439/6612d914e155eff2035d8428_Favicon.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="https://cdn.prod.website-files.com/6612d9034bf3b091b5ec7439/6612d91696b0f15f809a67f7_Webclip.png" rel="apple-touch-icon" />
 
-</style>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@graph": [
+    <meta content="metergrid - Deine All-in-One Lösung für die einfache Umsetzung von Mieterstrom" property="og:title" />
+    <meta content="metergrid realisiert dein Mieterstrom Projekt mit unserer All-In-One-Software. Rendite für dich, Solarstrom für deine Mieter. Jetzt Beratung anfragen!" property="og:description" />
+    <meta content="https://cdn.prod.website-files.com/66266f1f8efc9588e28a247a/6852b8fa40e15f2470f34f78_open%20graph%20(1).png" property="og:image" />
+    <meta content="metergrid - Deine All-in-One Lösung für die einfache Umsetzung von Mieterstrom" property="twitter:title" />
+    <meta content="metergrid realisiert dein Mieterstrom Projekt mit unserer All-In-One-Software. Rendite für dich, Solarstrom für deine Mieter. Jetzt Beratung anfragen!" property="twitter:description" />
+    <meta property="og:type" content="website" />
+    <meta content="summary_large_image" name="twitter:card" />
+
+    <style>
+        .anti-flicker, .anti-flicker * { visibility: hidden !important; opacity: 0 !important; }
+        [data-wf-hidden-variation], [data-wf-hidden-variation]* { display: none !important; }
+    </style>
+
+    <link href="https://cdn.prod.website-files.com/66266f1f8efc9588e28a247a/css/dev-metergrid-v2.webflow.shared.6413dae9e.min.css" rel="stylesheet" type="text/css" fetchpriority="high" />
+
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet" />
+
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+            var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-KMB3SZ26');
+    </script>
+    <link href="https://cdn.intellimize.co/snippet/117797829.js" rel="preload" as="script" />
+    <script>
+        (function(e, t, p) { var n = document.documentElement, s = { p: [], r: [] }, u = { p: s.p, r: s.r, push: function(e) { s.p.push(e) }, ready: function(e) { s.r.push(e) } }; e.intellimize = u, n.className += " " + p, setTimeout(function() { n.className = n.className.replace(RegExp(" ?" + p), "") }, t) })(window, 4000, 'anti-flicker');
+        var wfClientScript = document.createElement("script");
+        wfClientScript.src = "https://cdn.intellimize.co/snippet/117797829.js", wfClientScript.async = !0, wfClientScript.onerror = function() { document.documentElement.className = document.documentElement.className.replace(RegExp(" ?anti-flicker"), "") }, document.head.appendChild(wfClientScript);
+    </script>
+    
+    <script async src="https://cdn.jsdelivr.net/npm/@finsweet/cookie-consent@1/fs-cc.js" fs-cc-consentmode="true" fs-cc-scroll="disable" fs-cc-mode="opt-in"></script>
+    <script src="https://cdn.prod.website-files.com/66266f1f8efc9588e28a247a%2F6544eda5f000985a163a8687%2F68a82c051865488f9ffa7b78%2Ffinsweetcomponentsconfig-1.0.6.js" type="module" async siteId="66266f1f8efc9588e28a247a" finsweet="components"></script>
+
+    <script type="application/ld+json">
     {
-      "@type": "Organization",
-      "@id": "https://www.metergrid.de/",
-      "name": "metergrid",
-      "url": "https://www.metergrid.de/",
-      "logo": {
-        "@type": "ImageObject",
-        "url": "https://cdn.prod.website-files.com/66266f1f8efc9588e28a247a/66266f1f8efc9588e28a24ff_logo.svg"
-      },
-      "foundingDate": "2021-01-01",
-      "sameAs": [
-        "https://de.linkedin.com/company/metergrid",
-        "https://www.instagram.com/metergrid/",
-        "https://www.youtube.com/@metergrid"
-      ],
-      "contactPoint": [
-        {
-          "@type": "ContactPoint",
-          "contactType": "customer support",
-          "email": "info@metergrid.de",
-          "telephone": "+49-711-925-38164",
-          "areaServed": ["DE"],
-          "availableLanguage": ["de", "en"]
-        },
-        {
-          "@type": "ContactPoint",
-          "contactType": "sales",
-          "email": "sales@metergrid.de",
-          "telephone": "+49-711-925-38164",
-          "areaServed": ["DE"],
-          "availableLanguage": ["de", "en"]
-        }
-      ]
-    },
-    {
-      "@type": "WebSite",
-      "@id": "https://www.metergrid.de/#website",
-      "url": "https://www.metergrid.de/",
-      "name": "metergrid",
-      "inLanguage": "de",
-      "publisher": { "@id": "https://www.metergrid.de/" },
-      "hasPart": {
-        "@type": "WebPage",
-        "name": "Datenschutz",
-        "url": "https://www.metergrid.de/datenschutz"
-      }
-    },
-    {
-      "@type": "Service",
-      "@id": "https://www.metergrid.de/",
-      "serviceType": "Mieterstrom, Mieterstrom-Software, Mieterstrom-Abrechnung, PV-Installation, Mieterstrom-Projektverwaltung",
-      "category": "Software as a Service",
-      "name": "metergrid Software",
-      "description": "Die metergrid Software bietet eine effiziente Lösung zur Verwaltung und Abrechnung von Mieterstromprojekten. Darüber hinaus bietet metergrid den Rundum-Sorglos-Service metergrid Plus, einen Reststromtarif mit Rabot Energy sowie weitere individuelle Services wie Mieterakquise, eine Mieter-App, und vieles mehr.",
-      "brand": { "@id": "https://www.metergrid.de/" },
-      "provider": { "@id": "https://www.metergrid.de/" },
-      "serviceOutput": "komplette Mieterstrom-Projektplanung, rechtssichere und transparente Mieterstrom-Abrechnung, umfangreiche Software, umfassender Kundenservice, Software-Onboarding für Anlagenbetreiber, Betreiberportal in der Software, Echtzeit-Messung der PV-Produktion, Mieter-Verwaltung und Rechnungserstellung in der Software, Mieter-App, Mieterstromprojekte ganz einfach in der Software verwalten, modernste digitale Messtechnik mit direkter Schnittstelle zur Software",
-      "areaServed": [
-        { "@type": "Country", "name": "Deutschland" }
-      ],
-      "audience": [
-        {
-          "@type": "BusinessAudience",
-          "audienceType": "B2B",
-          "description": "Unternehmen der Wohnungs- und Immobilienwirtschaft, Energieversorger, Immobilienverwalter, Projektentwickler, Genossenschaften"
-        },
-        {
-          "@type": "Audience",
-          "audienceType": "B2C",
-          "description": "Private Vermieter, Immobilieneigentümer von Mehrfamilienhäusern"
-        }
-      ]
-</script><script src="https://cdn.prod.website-files.com/66266f1f8efc9588e28a247a%2F6544eda5f000985a163a8687%2F68a82c051865488f9ffa7b78%2Ffinsweetcomponentsconfig-1.0.6.js" type="module" async="" siteId="66266f1f8efc9588e28a247a" finsweet="components"></script></head><body><div class="w-embed"><style>
+      "@context": "https://schema.org",
+      "@graph": [ /* Your JSON-LD content here */ ]
+    }
+    </script>
+</head><body><div class="w-embed"><style>
 *{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.c-cms-tabs-card .wf-empty,.c-tabs_card .wf-empty{padding:0}.listblock .list_item:last-child{margin-bottom:0}.listblock .list_item{background-image:url("https://assets-global.website-files.com/6612d9034bf3b091b5ec7439/6613dd24821e816951e57cea_check.svg");background-repeat:no-repeat;background-size:20px 20px;padding-left:2rem;background-position:left center;margin-bottom:.75rem;color:var(--steel);list-style-type:none}.text-link::after{position:absolute}.accordion_header.active .accordion_arrow{transform:rotate(180deg);transition:.5s}.btn_primary:hover{background-color:#0041cc}.btn.btn_primary.pricing-table-btn.pricing-table-btn-light:hover,.btn_secondary:hover{background-color:#ebf1ff}.bento_link:hover .btn_arrow,.btn_primary:hover .btn-rocket,.btn_primary:hover .btn_arrow,.btn_secondary:hover .btn-rocket,.btn_secondary:hover .btn_arrow,.floating_btn:hover .btn_arrow{transform:translate(6px,0)}@media only screen and (max-width:1290px) and (min-width:992px){html{font-size:calc(.2rem + .99125vw)}.checkbox_wrapper{flex-flow:column;gap:.5rem;padding:1.5rem 0}.checkbox_item{align-items:flex-start;flex-flow:row;justify-content:flex-start}.form_bottom{flex-flow:column;align-items:flex-start;gap:1rem}.form_bottom .btn{width:100%;justify-content:center}.form_list-wrapper{order:2}}.checkbox_item.selected{background-color:#f2f7ff;border:1px solid #0032a0}.swiper-pagination-bullet,.swiper-pagination-bullet-active{width:.75rem;height:.75rem;display:inline-block;border-radius:100%}.section.is-hero-form{background-blend-mode:luminosity}.w-background-video>video{bottom:-75%}@media screen and (min-width:1300px){.w-background-video>video{bottom:-65%}}.swiper-pagination,.swiper-pagination_four,.swiper-pagination_three,.swiper-pagination_two{position:relative;padding-top:2rem}.swiper-pagination-bullet{background-color:#e1eaf8;margin-left:.5rem;cursor:pointer}.swiper-pagination-bullet-active{background-color:#0032a0}.sticky-scroll_img-item.is-active,.sticky-scroll_text-item.is-active{opacity:1}.snippet_text{overflow:hidden;-webkit-box-orient:vertical;-webkit-line-clamp:2;display:-webkit-box}.w-nav[data-collapse=medium] .w-nav-button{display:flex!important}.toggle .wf-empty{padding-bottom:0;padding-right:0}.media-tabs_menu>a.media-tabs_menu-item:first-of-type{border-top-left-radius:.5rem;border-bottom-left-radius:.5rem}.media-tabs_menu>a.media-tabs_menu-item:last-of-type{border-top-right-radius:.5rem;border-bottom-right-radius:.5rem}.tab-menu-vertical-wrapper>a.media-tabs_menu-item:first-of-type{border-top-left-radius:.5rem;border-top-right-radius:.5rem}.tab-menu-vertical-wrapper>a.media-tabs_menu-item:last-of-type{border-bottom-left-radius:.5rem;border-bottom-right-radius:.5rem}.c-cms-tabs-item.w-dyn-item.cc-selected,.media-tabs_menu-item.w--current .media-tabs_menu-inner{background-color:var(--white)}.blog_textblock h2,.blog_textblock h3,.blog_textblock h4{font-size:1.875rem;margin-top:2rem;margin-bottom:1.25rem}.blog_textblock ul{margin-top:2rem}.blog_textblock p{color:var(--rich-black)}.blog_textblock table{border:1px solid #000;margin-top:2rem;margin-bottom:2rem}.blog_textblock table td{padding:1rem;border:1px solid #000}.w-richtext figure img{max-width:100%}.w-richtext figure{margin-top:2rem;margin-bottom:2rem;max-width:100%}.w-richtext figure[data-rt-type=video]{width:60%!important}@media screen and (max-width:767px){.form_bottom .btn{width:100%;justify-content:center}.blog_textblock h2,.blog_textblock h3{font-size:1.5rem}.table-scroll{overflow:scroll}.accordion_content ul li,.blog_textblock ul li{font-size:.938rem}}.is-faq-page-item{width:100%}.accordion_content ul{color:var(--steel)}.accordion_content .w-richtext a{color:#0032a0;text-decoration:underline}@media screen and (max-width:480px){.listblock .list_item{background-position:left top;background-size:18px 18px}.media-tabs_menu{display:grid;grid-template-columns:1fr 1fr;gap:.5rem}.media-tabs_menu-item,.media-tabs_menu-item.w--current{background-color:transparent}.media-tabs_menu-inner{background-color:var(--light-blue);text-align:center}.media-tabs_menu-item{padding:0}.tab-menu-vertical-wrapper .media-tabs_menu-inner{text-align:left}}
  .team-img-wrapper img{transition: filter .4s ease;}
 .team-card:hover .team-img-wrapper .is-hover-img {filter: blur(5px);}
